[project]
name = "volleybot"
version = "0.1.0"
description = "Automatic volleyball video editing toolkit — detects rallies and cuts dead time"
authors = [
    { email = "rexfung@umich.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.45",
    "wandb>=0.26.1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
